load(
    "//:python.bzl",
    "gematria_py_binary",
    "gematria_py_test",
    "gematria_pybind_extension",
)

package(
    default_visibility = ["//visibility:private"],
)

gematria_pybind_extension(
    name = "bhive_importer",
    srcs = ["bhive_importer.cc"],
    py_deps = [
        "//gematria/llvm/python:canonicalizer",
        "//gematria/proto:basic_block_py_pb2",
        "//gematria/proto:canonicalized_instruction_py_pb2",
        "//gematria/proto:throughput_py_pb2",
    ],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/basic_block:basic_block_protos",
        "//gematria/datasets:bhive_importer",
        "//gematria/llvm:canonicalizer",
        "@com_google_pybind11_protobuf//pybind11_protobuf:native_proto_caster",
        "@llvm-project//llvm:Support",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

gematria_py_test(
    name = "bhive_importer_test",
    size = "small",
    srcs = ["bhive_importer_test.py"],
    deps = [
        ":bhive_importer",
        "//gematria/llvm/python:canonicalizer",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/proto:basic_block_py_pb2",
        "//gematria/proto:canonicalized_instruction_py_pb2",
        "//gematria/proto:throughput_py_pb2",
    ],
)

gematria_py_binary(
    name = "import_from_bhive",
    srcs = ["import_from_bhive.py"],
    deps = [
        ":bhive_importer",
        "//gematria/llvm/python:canonicalizer",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/utils/python:pybind11_abseil_status",
    ],
)

gematria_py_binary(
    name = "extract_tokens_file",
    srcs = ["extract_tokens_file.py"],
    deps = [
        "//gematria/basic_block/python:basic_block",
        "//gematria/basic_block/python:basic_block_protos",
        "//gematria/io/python:tfrecord",
        "//gematria/proto:throughput_py_pb2",
    ],
)

gematria_py_test(
    name = "extract_tokens_file_test",
    size = "small",
    srcs = ["extract_tokens_file_test.py"],
    data = [
        "extract_tokens_file_tests/lit.cfg.py",
        "extract_tokens_file_tests/lit.site.cfg.py",
        ":extract_tokens_file",
        ":import_from_bhive",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//llvm:split-file",
    ] + glob(["extract_tokens_file_tests/*.test"]),
)

gematria_pybind_extension(
    name = "extract_bbs_from_obj",
    srcs = ["extract_bbs_from_obj.cc"],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/datasets:extract_bbs_from_obj_lib",
        "//gematria/llvm:llvm_to_absl",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

genrule(
    name = "extract_bbs_from_obj_test_file",
    testonly = True,
    srcs = ["extract_bbs_from_obj_test.yaml"],
    outs = ["extract_bbs_from_obj_test_file.o"],
    cmd = "$(location @llvm-project//llvm:yaml2obj) $(location extract_bbs_from_obj_test.yaml) -o $(location extract_bbs_from_obj_test_file.o)",
    tools = [
        "@llvm-project//llvm:yaml2obj",
    ],
)

gematria_py_test(
    name = "extract_bbs_from_obj_test",
    size = "small",
    srcs = ["extract_bbs_from_obj_test.py"],
    data = [
        ":extract_bbs_from_obj_test_file",
    ],
    deps = [
        ":extract_bbs_from_obj",
        "@rules_python//python/runfiles",
    ],
)
