load(
    "//:python.bzl",
    "gematria_py_binary",
    "gematria_py_test",
    "gematria_pybind_extension",
)

package(
    default_visibility = ["//visibility:private"],
)

gematria_pybind_extension(
    name = "bhive_importer",
    srcs = ["bhive_importer.cc"],
    py_deps = [
        "//gematria/llvm/python:canonicalizer",
        "//gematria/proto:basic_block_py_pb2",
        "//gematria/proto:canonicalized_instruction_py_pb2",
        "//gematria/proto:throughput_py_pb2",
    ],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/basic_block:basic_block_protos",
        "//gematria/datasets:bhive_importer",
        "//gematria/llvm:canonicalizer",
        "@com_google_pybind11_protobuf//pybind11_protobuf:native_proto_caster",
        "@llvm-project//llvm:Support",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

gematria_py_test(
    name = "bhive_importer_test",
    size = "small",
    srcs = ["bhive_importer_test.py"],
    deps = [
        ":bhive_importer",
        "//gematria/llvm/python:canonicalizer",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/proto:basic_block_py_pb2",
        "//gematria/proto:canonicalized_instruction_py_pb2",
        "//gematria/proto:throughput_py_pb2",
    ],
)

gematria_py_binary(
    name = "import_from_bhive",
    srcs = ["import_from_bhive.py"],
    visibility = ["//gematria/datasets/python/extract_tokens_file_tests:__pkg__"],
    deps = [
        ":bhive_importer",
        "//gematria/llvm/python:canonicalizer",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/utils/python:pybind11_abseil_status",
    ],
)

gematria_pybind_extension(
    name = "annotating_importer",
    srcs = ["annotating_importer.cc"],
    py_deps = [
        "//gematria/llvm/python:canonicalizer",
        "//gematria/proto:basic_block_py_pb2",
        "//gematria/proto:canonicalized_instruction_py_pb2",
        "//gematria/proto:throughput_py_pb2",
    ],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/basic_block:basic_block_protos",
        "//gematria/datasets:annotating_importer",
        "//gematria/datasets:bhive_importer",
        "//gematria/llvm:canonicalizer",
        "@com_google_pybind11_protobuf//pybind11_protobuf:native_proto_caster",
        "@llvm-project//llvm:Support",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

gematria_py_test(
    name = "annotating_importer_test",
    size = "small",
    srcs = ["annotating_importer_test.py"],
    data = [
        "//gematria/testing/testdata:simple_x86_elf_object",
        "//gematria/testing/testdata:simple_x86_elf_object.perf.data",
    ],
    deps = [
        ":annotating_importer",
        "//gematria/llvm/python:canonicalizer",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/proto:basic_block_py_pb2",
        "//gematria/proto:canonicalized_instruction_py_pb2",
        "//gematria/proto:throughput_py_pb2",
        "@rules_python//python/runfiles",
    ],
)

gematria_py_binary(
    name = "import_annotated_basic_blocks",
    srcs = ["import_annotated_basic_blocks.py"],
    deps = [
        ":annotating_importer",
        "//gematria/llvm/python:canonicalizer",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/utils/python:pybind11_abseil_status",
    ],
)

gematria_py_binary(
    name = "extract_tokens_file",
    srcs = ["extract_tokens_file.py"],
    visibility = ["//gematria/datasets/python/extract_tokens_file_tests:__pkg__"],
    deps = [
        "//gematria/basic_block/python:basic_block",
        "//gematria/basic_block/python:basic_block_protos",
        "//gematria/io/python:tfrecord",
        "//gematria/proto:throughput_py_pb2",
    ],
)

gematria_pybind_extension(
    name = "extract_bbs_from_obj",
    srcs = ["extract_bbs_from_obj.cc"],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/datasets:extract_bbs_from_obj_lib",
        "//gematria/llvm:llvm_to_absl",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

genrule(
    name = "extract_bbs_from_obj_test_file",
    testonly = True,
    srcs = ["extract_bbs_from_obj_test.yaml"],
    outs = ["extract_bbs_from_obj_test_file.o"],
    cmd = "$(location @llvm-project//llvm:yaml2obj) $(location extract_bbs_from_obj_test.yaml) -o $(location extract_bbs_from_obj_test_file.o)",
    tools = [
        "@llvm-project//llvm:yaml2obj",
    ],
)

gematria_py_test(
    name = "extract_bbs_from_obj_test",
    size = "small",
    srcs = ["extract_bbs_from_obj_test.py"],
    data = [
        ":extract_bbs_from_obj_test_file",
    ],
    deps = [
        ":extract_bbs_from_obj",
        "@rules_python//python/runfiles",
    ],
)

gematria_pybind_extension(
    name = "process_and_filter_bbs",
    srcs = ["process_and_filter_bbs.cc"],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/datasets:process_and_filter_bbs_lib",
        "//gematria/llvm:llvm_to_absl",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

gematria_py_test(
    name = "process_and_filter_bbs_test",
    size = "small",
    srcs = ["process_and_filter_bbs_test.py"],
    deps = [
        ":process_and_filter_bbs",
    ],
)

gematria_pybind_extension(
    name = "bhive_to_exegesis",
    srcs = ["bhive_to_exegesis.cc"],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/datasets:bhive_to_exegesis",
        "//gematria/llvm:llvm_to_absl",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

gematria_py_test(
    name = "bhive_to_exegesis_test",
    size = "small",
    srcs = ["bhive_to_exegesis_test.py"],
    deps = [
        ":bhive_to_exegesis",
        "//gematria/llvm/python:llvm_architecture_support",
    ],
)

gematria_pybind_extension(
    name = "exegesis_benchmark",
    srcs = ["exegesis_benchmark.cc"],
    visibility = ["//:internal_users"],
    deps = [
        "//gematria/datasets:bhive_to_exegesis",
        "//gematria/datasets:exegesis_benchmark_lib",
        "//gematria/llvm:llvm_to_absl",
        "@pybind11_abseil_repo//pybind11_abseil:status_casters",
    ],
)

gematria_py_test(
    name = "exegesis_benchmark_test",
    size = "small",
    srcs = ["exegesis_benchmark_test.py"],
    tags = [
        "perf_counters",
    ],
    deps = [
        ":bhive_to_exegesis",
        ":exegesis_benchmark",
        "//gematria/llvm/python:llvm_architecture_support",
    ],
)
