load("//:python.bzl", "gematria_py_library", "gematria_py_test")

package(
    default_visibility = ["//visibility:private"],
)

gematria_py_library(
    name = "flag_utils",
    srcs = ["flag_utils.py"],
    visibility = ["//:internal_users"],
)

gematria_py_test(
    name = "flag_utils_test",
    size = "small",
    srcs = ["flag_utils_test.py"],
    deps = [
        ":flag_utils",
        "@pypi//absl_py",
    ],
)

gematria_py_library(
    name = "timer",
    srcs = ["timer.py"],
    visibility = ["//:internal_users"],
    deps = [
        "@pypi//absl_py",
    ],
)

gematria_py_test(
    name = "timer_test",
    size = "small",
    srcs = ["timer_test.py"],
    deps = [
        ":timer",
        "@pypi//absl_py",
    ],
)

# The following is a dummy helper rule that allows us to use the pybind11-generated
# Python library as a regualar Python dependency throughout the code base.
gematria_py_library(
    name = "pybind11_abseil_status",
    data = [
        "@pybind11_abseil_repo//pybind11_abseil:status.so",
    ],
    visibility = ["//:internal_users"],
)

# The following rules bundle sonnet and graph_nets, which are brought in as
# traditional bazel dependencies, with their PyPI dependencies for convenience.
gematria_py_library(
    name = "sonnet",
    visibility = ["//:internal_users"],
    deps = [
        "@pypi//contextlib2",
        "@pypi//semantic_version",
        "@pypi//tabulate",
        "@pypi//tensorflow",
        "@pypi//tensorflow_probability",
        "@pypi//tf_keras",
        "@sonnet_repo//sonnet",
    ],
)

gematria_py_library(
    name = "graph_nets",
    visibility = ["//:internal_users"],
    deps = [
        ":sonnet",
        "@graph_nets_repo//:graph_nets",
        "@pypi//networkx",
        "@pypi//semantic_version",
        "@pypi//six",
    ],
)
